--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,20 @@ dependencies:
   flutter_screenutil: ^5.6.0
   device_preview: ^1.1.0
   firebase_core: ^2.3.0
+  flutter_staggered_animations: ^1.1.1
+  firebase_auth: ^4.1.4
+  cloud_firestore: ^4.1.0
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.7.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.2
+  freezed: ^2.2.1
+  json_serializable: ^6.5.4
 
 flutter:
 
