--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   cloud_firestore: ^4.1.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
+  flutterfire_ui: ^0.4.3+20
+  uuid: ^3.0.7
 
 
 dev_dependencies:
@@ -51,9 +53,9 @@ flutter:
       fonts:
         - asset: assets/fonts/SFPro-Regular.ttf
        
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/RobotoMono-Regular.ttf
+       
+       
 
