--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   firebase_core: ^2.3.0
   flutter_staggered_animations: ^1.1.1
   firebase_auth: ^4.1.4
+  flutter_slidable: ^2.0.0
   cloud_firestore: ^4.1.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
